feat: Docker version